<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="180dp"
        android:layout_height="74dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher48" />

            <LinearLayout
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noms"
                    android:layout_width="275dp"
                    android:layout_height="23dp"
                    android:text="@string/nom" />

                <TextView
                    android:id="@+id/asd"
                    android:layout_width="275dp"
                    android:layout_height="23dp"
                    android:text="@string/horario" />

                <TextView
                    android:id="@+id/qe"
                    android:layout_width="275dp"
                    android:layout_height="23dp"
                    android:text="@string/modelo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itnombres"
                    android:layout_width="275dp"
                    android:layout_height="23dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/ithorario"
                    android:layout_width="275dp"
                    android:layout_height="23dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/itmodelo"
                    android:layout_width="275dp"
                    android:layout_height="23dp"
                    android:text="TextView" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!---<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itlugar"
            android:layout_width="275dp"
            android:layout_height="23dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/ithorario"
            android:layout_width="275dp"
            android:layout_height="23dp"
            android:text="TextView" />
        <TextView
            android:id="@+id/itnombres"
            android:layout_width="275dp"
            android:layout_height="23dp"
            android:text="TextView" />
        <TextView
            android:id="@+id/itmodelo"
            android:layout_width="275dp"
            android:layout_height="23dp"
            android:text="TextView" />

    </LinearLayout>-->

</android.support.constraint.ConstraintLayout>